# xrr-poly

./: .gitignore  CODE_OF_CONDUCT.md  README.md  Taskfile.yml
.github/workflows/: ci.yml  nightly-publish.yml  split-publish.yml
docs/personas/: README.md  ai-agent-developer.md  oss-contributor.md  solo-developer.md  test-infrastructure-engineer.md
docs/plans/: 2026-04-01-xrr-multi-language.md  2026-04-02-split-publish-v1.mmd  2026-04-02-split-publish.md
docs/stories/: README.md  US-0101-record-first-cassette.md  US-0102-replay-in-ci.md  US-0103-cross-language-replay.md  US-0104-adapter-selection.md  US-0105-cassette-miss.md  US-0201-explore-interfaces.md  US-0202-port-adapter.md  US-0203-add-conformance-fixture.md  US-0204-cross-lang-bug.md  US-0205-ci-green.md
go/: README.md  cassette.go  cassette_test.go  conformance_test.go  e2e_test.go  env.go  env_test.go  go.mod  session.go  session_test.go  xrr.go
php/: CONTRIBUTING.md  README.md  composer.json  phpunit.xml  rector.php
php/src/: AdapterInterface.php  FileCassette.php  Mode.php  Session.php
php/tests/: CassetteTest.php  ConformanceTest.php  (+2 more)
py/: .gitignore  pyproject.toml
py/src/xrr/: __init__.py  cassette.py  session.py
py/src/xrr/adapters/: __init__.py  exec.py  http.py  redis.py  sql.py
py/tests/: test_cassette.py  test_conformance.py  test_e2e.py  test_session.py
rs/: Cargo.toml  LICENSE  README.md
rs/src/: cassette.rs  error.rs  lib.rs  session.rs
rs/src/adapters/: exec.rs  http.rs  mod.rs  redis.rs  sql.rs
rs/tests/: conformance.rs  e2e.rs
spec/: cassette-format-v1.md
ts/: README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.json
vs/: README.md
(+39 files in other folders)
