[package]
name = "xrr"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
license-file = "../LICENSE"
include = [
    "src/**/*",
    "../LICENSE",
    "../CODE_OF_CONDUCT.md",
    "../CONTRIBUTING.md",
    "../SECURITY.md",
    "../README.md",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
